k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: techdome-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-storage
      volumes:
        - name: mongo-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: techdome-namespace
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None  # Headless service for direct access
